--- a/main.html
+++ b/main.html
@@ -1,11 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link href="/stylesheet.css" rel="stylesheet">
+  </head>
+  <body>
+    <div class="card_container">
+        <div class="card" id="card_1">
+            <div id="card_info_1" class="card_info">       
+            </div>
+        </div>
+        <div class="card" id="card_2">
+            <div id="card_info_2" class="card_info">       
+            </div>
+        </div>
+        <div class="card" id="card_3">
+            <div id="card_info_3" class="card_info">       
+            </div>
+        </div>
+        <div class="card" id="card_4">
+            <div id="card_info_4" class="card_info">       
+            </div>
+        </div>
+        <div class="card" id="card_5">
+            <div id="card_info_5" class="card_info">       
+            </div>
+        </div>
+        <div class="card" id="card_6">
+            <div id="card_info_6" class="card_info">       
+            </div>
+        </div>
+        <div class="card" id="card_7">
+            <div id="card_info_7" class="card_info">       
+            </div>
+        </div>
+        <div class="card" id="card_8">
+            <div id="card_info_8" class="card_info">       
+            </div>
+        </div>
+        <div class="card" id="card_9">
+            <div id="card_info_9" class="card_info">       
+            </div>
+        </div>
+    </div>
+ <script src="/script.js"></script>
+  </body>
 </html>
