Classes addedmodal is started, a way to get only 9 per called is implemented.

--- a/main.html
+++ b/main.html
@@ -4,47 +4,56 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="/stylesheet.css" rel="stylesheet">
+    <link href="/stylesheet.css" rel="stylesheet" />
   </head>
   <body>
     <div class="card_container">
-        <div class="card" id="card_1">
-            <div id="card_info_1" class="card_info">       
-            </div>
+      <div class="card" id="card_1">
+        <div class="modal" id="modal_1">
+          <div id="card_info_1" class="card_info"></div>
         </div>
-        <div class="card" id="card_2">
-            <div id="card_info_2" class="card_info">       
-            </div>
+      </div>
+      <div class="card" id="card_2">
+        <div class="modal"  id="modal_2">
+          <div id="card_info_2" class="card_info"></div>
         </div>
-        <div class="card" id="card_3">
-            <div id="card_info_3" class="card_info">       
-            </div>
+      </div>
+      <div class="card" id="card_3">
+        <div class="modal"  id="modal_3">
+          <div id="card_info_3" class="card_info"></div>
         </div>
-        <div class="card" id="card_4">
-            <div id="card_info_4" class="card_info">       
-            </div>
+      </div>
+      <div class="card" id="card_4">
+        <div class="modal"  id="modal_4">
+          <div id="card_info_4" class="card_info"></div>
         </div>
-        <div class="card" id="card_5">
-            <div id="card_info_5" class="card_info">       
-            </div>
+      </div>
+      <div class="card" id="card_5">
+        <div class="modal"  id="modal_5">
+        <div id="card_info_5" class="card_info"></div>
+      </div>
+      </div>
+      <div class="card" id="card_6">
+        <div class="modal"  id="modal_6">
+        <div id="card_info_6" class="card_info" ></div>
         </div>
-        <div class="card" id="card_6">
-            <div id="card_info_6" class="card_info">       
-            </div>
+      </div>
+      <div class="card" id="card_7">
+        <div class="modal"  id="modal_7">
+        <div id="card_info_7" class="card_info"></div>
         </div>
-        <div class="card" id="card_7">
-            <div id="card_info_7" class="card_info">       
-            </div>
-        </div>
-        <div class="card" id="card_8">
-            <div id="card_info_8" class="card_info">       
-            </div>
-        </div>
-        <div class="card" id="card_9">
-            <div id="card_info_9" class="card_info">       
-            </div>
-        </div>
+      </div>
+      <div class="card" id="card_8">
+        <div class="modal"  id="modal_8">
+        <div id="card_info_8" class="card_info"></div>
     </div>
- <script src="/script.js"></script>
+      </div>
+      <div class="card" id="card_9">
+        <div class="modal"  id="modal_9">
+        <div id="card_info_9" class="card_info"></div>
+        </div>
+      </div>
+    </div>
+    <script src="/script.js"></script>
   </body>
 </html>
