slide limit problem corrected

--- a/main.html
+++ b/main.html
@@ -36,7 +36,7 @@
       <div class="card" id="card_9" onclick="showModal(9)">
       </div>
     </div>
-    <button id="next_button" onclick="plusSlides(+9)">Next</button>
+    <button id="next_button" onclick="plusSlides(9)">Next</button>
   </div>
     <script src="/script.js"></script>
   </body>
