colors are added, some hover actions are added, some box shadows are added

--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
       <!-- You can add a button here to perform the search -->
     </div>
     <div class="carousel">
-      <button id="prev_button" onclick="plusSlides(-9)">prev</button>
+      <button id="prev_button" onclick="plusSlides(-9)"><</button>
     <div class="card_container">
       <button id="close_modals" type="button" onclick="removeModal()">x</button>
       <div class="card" id="card_1" onclick="showModal(1)">
@@ -38,7 +38,7 @@
       <div class="card" id="card_9" onclick="showModal(9)">
       </div>
     </div>
-    <button id="next_button" onclick="plusSlides(9)">Next</button>
+    <button id="next_button" onclick="plusSlides(9)">></button>
   </div>
     <script src="/script.js"></script>
   </body>
